--- a/.gitignore
+++ b/.gitignore
@@ -65,10 +65,11 @@ y.vcg
 *.log
 *.pdf
 *.synctex.gz
-test/gcd
-test/factorial
-test/fibonacci
-test/primes
+gcd
+factorial
+fibonacci
+primes
+tree
 *.zip
 lexer
 calc
